Integrator does not switch back to progressive automatically when using GPU, after using non progressive on CPU #33909

Closed
opened 2013-01-17 16:00:28 +01:00 by john kearvell · 3 comments

%%%--- Operating System, Graphics card ---
Ubuntu 12.1, nvidia GTX460

- Blender version with error, and version that worked ---

Buildbot r53872

- Short description of error ---

After changing to the non-progressive integrator using CPU for rendering, I noticed that if I change back to GPU without turning the progressive check box back on, the number of samples set for GPU is ignored and the number of samples actually rendered are those set in AA samples using the non progressive integrator.

- Steps for others to reproduce the error (preferably based on attached .blend file) ---
  1. Start any scene
  2. Using GPU rendering, set number of samples to an amount (eg. 200).
  3. Render
  4. Change to CPU
  5. Turn off progressive rendering, set samples to low amount (eg. AA 5)
  6. Render
  7. Change back to GPU, using Device pulldown, but don't turn progessive back on.
  8. Render - The scene will now only render with the number of samples set in AA section of the non progressive integrator, regardless of how many samples you set for rendering.

I would have assumed that when changing back to GPU, progressive should be re-enabled automatically however, this does not appear to be the case. This confused me for a while as I could not understand why even though I had set 200 samples I was only getting a few in the render (5).

Maybe this should be an automatic process? However, if the intention is to enable non progressive rendering for GPU in the future (I don't know if this is possible), then please ignore.

%%%

%%%--- Operating System, Graphics card --- Ubuntu 12.1, nvidia GTX460 - Blender version with error, and version that worked --- Buildbot r53872 - Short description of error --- After changing to the non-progressive integrator using CPU for rendering, I noticed that if I change back to GPU without turning the progressive check box back on, the number of samples set for GPU is ignored and the number of samples actually rendered are those set in AA samples using the non progressive integrator. - Steps for others to reproduce the error (preferably based on attached .blend file) --- 1. Start any scene 2. Using GPU rendering, set number of samples to an amount (eg. 200). 3. Render 4. Change to CPU 5. Turn off progressive rendering, set samples to low amount (eg. AA 5) 6. Render 7. Change back to GPU, using Device pulldown, but don't turn progessive back on. 8. Render - The scene will now only render with the number of samples set in AA section of the non progressive integrator, regardless of how many samples you set for rendering. I would have assumed that when changing back to GPU, progressive should be re-enabled automatically however, this does not appear to be the case. This confused me for a while as I could not understand why even though I had set 200 samples I was only getting a few in the render (5). Maybe this should be an automatic process? However, if the intention is to enable non progressive rendering for GPU in the future (I don't know if this is possible), then please ignore. %%%
Author

Changed status to: 'Open'

Changed status to: 'Open'

%%%Fix in SVN 53885. Thanks for the report. %%%

%%%Fix in SVN 53885. Thanks for the report. %%%

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#33909
No description provided.